# lamiae

./: .gitattributes  .gitignore  LICENSE.txt  README.md  README.txt  lamiae.bat  lamiae.sh  resync.cfg
bin_bsd/: readme.txt
config/: blendbrush.cfg  default_map_settings.cfg  defaults.cfg  font.cfg  fxaa.cfg  glsl.cfg  heightmap.cfg  joymap.cfg  keymap.cfg  music.cfg  smaa.cfg  stdedit.cfg  stdlib.cfg  stdui.cfg  ui.cfg  variables.cfg
config/glsl/: aa.cfg  ao.cfg  blur.cfg  decal.cfg  deferred.cfg  edit.cfg  fxaa.cfg  gi.cfg  hud.cfg  material.cfg  misc.cfg  model.cfg  movie.cfg  ovr.cfg  particle.cfg  postfx.cfg  scale.cfg  shared.cfg  sky.cfg  smaa.cfg  stain.cfg  tonemap.cfg  ui.cfg  volumetric.cfg  world.cfg
config/menus/: background.cfg  console.cfg  editpanels.cfg  loading.cfg
config/menus/editpanels/: entities.cfg  lighting.cfg  mapmodels.cfg  materials.cfg  sky.cfg  stats.cfg
config/models/: 00_standard.cfg
config/rpg/: compat.cfg  defaults.cfg  enums.cfg  game.cfg  hud_standard.cfg  huds.txt  sounds.cfg  std.cfg  ui.cfg  utility.cfg
config/rpg/utilities/: vector.cfg
config/textures/: 00_standard.cfg
config/variables/: edit.cfg  input.cfg  rpg.cfg  ui.cfg
data/: brush.cfg  default_map_models.cfg  default_map_settings.cfg  defaults.cfg  font.cfg  glsl.cfg  keymap.cfg  music.cfg  stdedit.cfg  stdlib.cfg  stdui.cfg  ui.cfg
data/rpg/: defaults.cfg  enums.cfg  game.cfg  games.cfg  hud_standard.cfg  menus.cfg  std.cfg  ui.cfg  utility.cfg
data/rpg/hud/: license.txt
data/rpg/utilities/: vector.cfg
data/textures/: 00_standard.cfg
games/: default.cfg  fireworks.cfg
games/base/: base.cfg  categories.cfg  player.cfg
games/base/ammo/: experience.cfg  mana.cfg
games/base/containers/: README.txt
games/base/factions/: 0.cfg
games/base/includes/: critter common.cfg
games/base/scripts/: default container.cfg  default item.cfg
games/base/statuses/: README.txt
games/base/tools/: experience.cfg  time.cfg
games/default/: categories.cfg  player.cfg  tips.cfg
games/default/ammo/: health.cfg  throwables.cfg
games/default/containers/: blacksmith.cfg
games/default/critters/: blacksmith.cfg  innkeeper.cfg  townsperson.cfg
games/default/cutscenes/: permanent death.cfg
games/default/effects/: dagger.cfg
games/default/factions/: index.txt  village.cfg
games/default/includes/: critter common.cfg  drinkable drink.cfg  edible food.cfg
games/default/items/: README.txt  apple cider.cfg  apple juice.cfg  apple.cfg  cabbage.cfg  dagger.cfg  grape juice.cfg  grapes.cfg  money.cfg  shortsword.cfg  strawberry cider.cfg  strawberry juice.cfg  strawberry.cfg  tomato juice.cfg  tomato.cfg  wheat.cfg  wine.cfg  yeast.cfg
games/default/maps/: village-art.cfg  village.ogz
games/default/mapscripts/: README.txt  index.txt
games/default/merchants/: blacksmith.cfg  innkeeper.cfg
games/default/recipes/: apple juice.cfg  grape juice.cfg  strawberry juice.cfg  tomato juice.cfg
games/default/scripts/: 7.cfg  README.txt  blacksmith stash.cfg  blacksmith.cfg  brewing keg.cfg  default critter.cfg  default item.cfg  harvestable plant.cfg  innkeeper.cfg  player.cfg
games/default/statuses/: minor damage.cfg  minor restore health.cfg  minor restore mana.cfg
games/default/tools/: time.cfg
games/default/triggers/: apple.cfg  cabbage.cfg  grapes.cfg  keg.cfg  strawberry.cfg  tomato.cfg  wheat.cfg
games/fireworks/: README.txt  player.cfg  tips.cfg
games/fireworks/critters/: 0.cfg
games/fireworks/cutscenes/: README.txt
games/fireworks/effects/: 10.cfg  README.txt
games/fireworks/includes/: random effect.cfg
games/fireworks/mapscripts/: 0.cfg
games/fireworks/scripts/: 2.cfg  4.cfg
games/fireworks/statuses/: index.txt
linux/: lamiae.desktop
media/fonts/: default.cfg  default.txt
media/models/rick/: LICENSE.txt
media/models/vini/: LICENSE.txt
media/models/wind/: license.txt  package.cfg
media/models/xonotic/: License.txt  anims.cfg  erebus_mask.dds  gak.dds  gak_mask.dds  gak_norm.dds  gakarmor.dds  nyx.dds  (+7 more)
misc/: lamiae.kra
src/: CMakeLists.txt  Makefile  Makefile.32  Makefile.debug  check_enet.sh  includes.mk
src/enet/: ChangeLog  Makefile.in  aclocal.m4  configure  peer.c  protocol.c  unix.c  win32.c
src/enet/docs/: mainpage.dox
src/enet/include/enet/: enet.h
src/engine/: .3dgui.cpp.kate-swp  AreaTex.h  SearchTex.h  aa.cpp  animmodel.h  bih.cpp  bih.h  blend.cpp  client.cpp  command.cpp  console.cpp  decal.cpp  dynlight.cpp  engine.h  explosion.h  grass.cpp  hitzone.h  iqm.h  lensflare.h  light.cpp  light.h  lightning.h  main.cpp  material.cpp  md2.h  md3.h  md5.h  model.h  movie.cpp  mpr.h  normal.cpp  obj.h  octa.cpp  octa.h  octaedit.cpp  octarender.cpp  ovr.cpp  physics.cpp  pvs.cpp  ragdoll.h  (+26 more)
src/include/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_blendmode.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_log.h  SDL_main.h  SDL_mixer.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_pixels.h  SDL_platform.h  SDL_power.h  SDL_rect.h  SDL_render.h  SDL_revision.h  SDL_rwops.h  SDL_scancode.h  SDL_sensor.h  SDL_shape.h  SDL_stdinc.h  SDL_surface.h  SDL_system.h  SDL_syswm.h  SDL_thread.h  SDL_timer.h  SDL_touch.h  (+2 more)
src/lib/: SDL2.lib  enet.lib
src/lib64/: SDL2.lib  enet.lib
src/rpggame/: rpg.cpp  rpgaction.cpp  rpgai.cpp  rpgcamera.cpp  rpgchar.cpp  rpgconfig.cpp  rpgcontainer.cpp  rpgeffect.cpp  rpgentities.cpp  rpggame.h  rpggui.cpp  rpghud.cpp  rpgio.cpp  rpgitem.cpp  rpgobstacle.cpp  rpgplatform.cpp  rpgproj.cpp  rpgrender.cpp  rpgreserved.cpp  rpgscript.cpp  rpgstats.cpp  rpgstatus.cpp  rpgstubs.cpp  rpgtest.cpp  rpgtodo.txt  rpgtrigger.cpp  rpgvehicle.cpp  waypoint.cpp
src/shared/: command.h  crypto.cpp  cube.h  cube2font.c  ents.h  geom.cpp  geom.h  glemu.cpp  glemu.h  glexts.h  iengine.h  igame.h  stream.cpp  tessfont.c  tools.cpp  tools.h  zip.cpp
src/windows/: .gitignore  lamiae.cbp  lamiae.depend  lamiae.layout  mingw.rc
src/windows/resources/: lamiae.rc
(+274 files in other folders)
